[package]
name = "sudokurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sudokurs"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.5.1"
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["serde", "serde-json", "with-actix-web"] }
askama_actix = "0.14.0"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
features = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
